quick_tests/cases/pass/p02_if_else_exit_code_with_condition.webx
fn main() -> i32 { if false { return 0; } else { return 1; } }