quick_tests/cases/fail/f32_unclosed_function_brace_no_return.webx
fn main() -> i32 { if true { }